Add Superset Analytics

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -72,11 +72,13 @@
         <td class="center"><%= check_box_tag("customers[#{customer.id}]", '1', false, 'data-toggle' => 'disable-multiple-actions', 'data-target' => '#multiple-actions') %></td>
         <td class="center"><%= customer.ref %></td>
         <%
+          dashboard_url = analytic_url_for(customer, :customer_dashboard_url)
           audience_url = analytic_url_for(customer, :customer_audience_url)
           behavior_url = analytic_url_for(customer, :customer_behavior_url)
         %>
         <td><%= customer.name %>
           <br/>
+          <%= link_to '<i class="fa fa-chart-line" aria-hidden="true"></i>'.html_safe, dashboard_url, target: '_blank', title: t('customers.form.dashboard_url_help') if dashboard_url %>
           <%= link_to '<i class="fa fa-bar-chart" aria-hidden="true"></i>'.html_safe, audience_url, target: '_blank', title: t('customers.form.audience_url_help') if audience_url %>
           <%= link_to '<i class="fa fa-pie-chart" aria-hidden="true"></i>'.html_safe, behavior_url, target: '_blank', title: t('customers.form.behavior_url_help') if behavior_url %>
         </td>
