--- a/app/views/admin/resellers/_analysis_urls.html.erb
+++ b/app/views/admin/resellers/_analysis_urls.html.erb
@@ -4,6 +4,10 @@
     <%= t 'admin.resellers.edit.analysis_urls' %>
   </legend>
 
+  <%= f.text_field :customer_dashboard_url do %>
+    <p class="help-block"><%= t 'admin.resellers.form.customer_dashboard_url_help' %></p>
+  <% end %>
+
   <%= f.text_field :audience_url do %>
     <p class="help-block"><%= t 'admin.resellers.form.audience_url_help' %></p>
   <% end %>
