--- a/app/templates/destinations/_edit.mustache
+++ b/app/templates/destinations/_edit.mustache
@@ -24,17 +24,56 @@
         <input class="form-control input-sm" type="text" maxlength="17" width="17" name="destination[postalcode]" value="{{postalcode}}"/>
       </span>
       <span>
+        <input class="form-control input-sm" type="text" name="destination[country]" value="{{country}}" placeholder="{{default_country}}"/>
+      </span>
+      <span>
         <div class="input-group input-group-sm">
           <input class="form-control input-sm pointing" type="text" name="destination[city]" value="{{city}}" size="99"/>
           <span class="input-group-btn" title="{{#i18n}}destinations.form.locate_manually{{/i18n}}"><button class="btn btn-default" type="button"><i class="fa fa-crosshairs"></i></button></span>
         </div>
       </span>
     </span>
-  </td>
-  <td class="country">
-    <span>
-      <input class="form-control input-sm" type="text" name="destination[country]" value="{{country}}" placeholder="{{default_country}}"/>
-    </span>
+  </td><td class="geocoding">
+    <div class="block destination-geocoding">
+      <input type="hidden" name="destination[lat]" value="{{lat}}" />
+      <input type="hidden" name="destination[lng]" value="{{lng}}" />
+      <span class="geocoding_level" title="{{geocoding_level_title}}">
+        <input type="hidden" name="destination[geocoding_level]" value="{{geocoding_level}}">
+        {{#geocoding_level}}
+          {{#geocoding_level_point}}
+            <i class="fa fa-map-marker fa-fw geocoding-level"></i>
+          {{/geocoding_level_point}}
+          {{#geocoding_level_house}}
+            <i class="fa fa-store fa-fw geocoding-level"></i>
+          {{/geocoding_level_house}}
+          {{#geocoding_level_street}}
+            <i class="fa fa-road fa-fw geocoding-level"></i>
+          {{/geocoding_level_street}}
+          {{#geocoding_level_intersection}}
+            <i class="fa fa-times fa-fw geocoding-level"></i>
+          {{/geocoding_level_intersection}}
+          {{#geocoding_level_city}}
+            <i class="fa fa-exclamation-triangle fa-fw geocoding-level"></i>
+          {{/geocoding_level_city}}
+        {{/geocoding_level}}
+      </span>
+      <span>
+        {{#geocoding_accuracy}}
+          <input name="destination[geocoding_accuracy]" class="form-control input-sm" type="hidden" value="{{geocoding_accuracy}}"/>
+            <div class="progress" style="width:5em">
+              <div class="progress-bar progress-bar-{{geocoding_status}}" style="width: {{geocoding_accuracy_percent}}%;">
+                <span>{{geocoding_accuracy_percent}}%</span>
+              </div>
+            </div>
+        {{/geocoding_accuracy}}
+        {{^geocoding_accuracy}}
+          <input class="form-control input-sm" type="hidden" value="101"/>
+        {{/geocoding_accuracy}}
+      <span>
+      {{#has_no_position}}
+        <span class="no_position">{{#i18n}}destinations.index.geocoding_empty{{/i18n}}</span>
+      {{/has_no_position}}
+    </div>
   </td>
   <td class="comment">
     <textarea class="form-control input-sm" name="destination[comment]" rows="1">{{comment}}</textarea>
@@ -85,48 +124,6 @@
       </div>
     </td>
   {{/enable_multi_visits}}
-  <td class="geocoding">
-    <div class="block destination-geocoding">
-      <input type="hidden" name="destination[lat]" value="{{lat}}" />
-      <input type="hidden" name="destination[lng]" value="{{lng}}" />
-      <span class="geocoding_level" title="{{geocoding_level_title}}">
-        <input type="hidden" name="destination[geocoding_level]" value="{{geocoding_level}}">
-        {{#geocoding_level}}
-          {{#geocoding_level_point}}
-            <i class="fa fa-map-marker fa-fw geocoding-level"></i>
-          {{/geocoding_level_point}}
-          {{#geocoding_level_house}}
-            <i class="fa fa-store fa-fw geocoding-level"></i>
-          {{/geocoding_level_house}}
-          {{#geocoding_level_street}}
-            <i class="fa fa-road fa-fw geocoding-level"></i>
-          {{/geocoding_level_street}}
-          {{#geocoding_level_intersection}}
-            <i class="fa fa-times fa-fw geocoding-level"></i>
-          {{/geocoding_level_intersection}}
-          {{#geocoding_level_city}}
-            <i class="fa fa-exclamation-triangle fa-fw geocoding-level"></i>
-          {{/geocoding_level_city}}
-        {{/geocoding_level}}
-      </span>
-      <span>
-        {{#geocoding_accuracy}}
-          <input name="destination[geocoding_accuracy]" class="form-control input-sm" type="hidden" value="{{geocoding_accuracy}}"/>
-            <div class="progress" style="width:5em">
-              <div class="progress-bar progress-bar-{{geocoding_status}}" style="width: {{geocoding_accuracy_percent}}%;">
-                <span>{{geocoding_accuracy_percent}}%</span>
-              </div>
-            </div>
-        {{/geocoding_accuracy}}
-        {{^geocoding_accuracy}}
-          <input class="form-control input-sm" type="hidden" value="101"/>
-        {{/geocoding_accuracy}}
-      <span>
-      {{#has_no_position}}
-        <span class="no_position">{{#i18n}}destinations.index.geocoding_empty{{/i18n}}</span>
-      {{/has_no_position}}
-    </div>
-  </td>
   <td class="visit">
     <div class="destination-visits">
       {{#visits}}
