--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -296,7 +296,7 @@
         .modal-content
           .modal-header
             %h4
-              %i.fa.fa-2.modal-icon{style: "display:none;"}
+              %i.fa.fa-hourglass-half.modal-icon{style: "display:none;"}
               %span.modal-title
               %button.close{"data-dismiss": "modal", style: "display:none;", type: "button"} ×
           .modal-body
