--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -63,7 +63,7 @@ h1 {
     padding: 3px 5px;
 }
 
-.form-group {
+.row.form-group {
   .form-inline {
     // several values on same line, like radio buttons
     label {
