--- a/app/views/visits/_form.html.haml
+++ b/app/views/visits/_form.html.haml
@@ -6,7 +6,7 @@
       %a.accordion-toggle{"data-parent" => "", "data-toggle" => "collapse", href: "#collapseVisit#{visit.id || 0}"}
         %span= t('.legend', n: i)
       - if visit.destination.customer.enable_multi_visits || !current_page?(action: 'new')
-        .form-group.destroy-block
+        .row.form-group.destroy-block
           .col-md-3
             %button.btn.btn-default.btn-sm.flag-destroy{title: "#{t('.delete_help')}", type: "button"}
               %i.fa.fa-trash.fa-fw
@@ -97,4 +97,4 @@
         .destination_visits_attributes_tag_ids_input
           = f.select :tag_ids, options_for_select(visit.destination.customer.tags.map{ |tag| [tag.label, tag.id, {'data-color' => tag.color && tag.color[1..-1], 'data-icon' => tag.icon}]}, visit.tags.collect(&:id)), {label: t('activerecord.attributes.visit.tag_ids'), help: t('.tags_help')}, {multiple: true, input_group: content_tag('i', '', class: 'fa fa-tags fa-fw')}
 
-      = f.select :force_position, options_for_select(visit_force_position_options_for_select, selected: visit_force_position_options_for_select_selected(visit)), {label: t('activerecord.attributes.visit.force_position'), help: t('.force_position_help')}, {}
+      = f.select :force_position, options_for_select(visit_force_position_options_for_select, selected: visit_force_position_options_for_select_selected(visit)), {label: t('activerecord.attributes.visit.force_position'), help: t('.force_position_help')}, { control_class: 'form-control' }
