--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -427,7 +427,7 @@ span.color[data-color=''][data-selected]:after {
         h1 {
           margin-top: 10px;
         }
-        .form-horizontal .form-group {
+        .form-horizontal .row.form-group {
           margin-left: -10px;
           margin-right: -10px;
         }
@@ -613,7 +613,7 @@ input.form-control.number-of-days {
 }
 
 // Form
-.form-group {
+.row.form-group {
   &.has-error {
     .help-inline {
       color: $danger-color;
@@ -939,9 +939,9 @@ input.form-control.number-of-days {
   width: 100%;
   overflow-y: scroll;
 
-  .row {
-    margin: 0;
-  }
+  // .row {
+  //   margin: 0;
+  // }
 }
 
 #menu-settings {
@@ -977,7 +977,7 @@ input.form-control.number-of-days {
   }
 }
 
-.form-group input[type="checkbox"] {
+.row.form-group input[type="checkbox"] {
   margin-top: unset;
 }
 
