--- a/app/templates/zones/_show.mustache
+++ b/app/templates/zones/_show.mustache
@@ -16,7 +16,7 @@
   </div>
   <div class="panel-body">
     <input name="zoning[zones_attributes][][polygon]" type="hidden" value="{{polygon}}" />
-    <div class="form-group">
+    <div class="row form-group">
       <label class="col-md-3 control-label" for="vehicle_select">{{#i18n}}zonings.form.zone_vehicle{{/i18n}}</label>
       <div class="col-md-9">
         <select name="zoning[zones_attributes][][vehicle_id]" class="vehicle_select select2-xs">
