--- a/app/views/plannings/_form.html.haml
+++ b/app/views/plannings/_form.html.haml
@@ -11,7 +11,7 @@
     = f.text_field :name, required: true
   - if @planning.customer.vehicle_usage_sets.size > 1
     %div
-      = f.collection_select :vehicle_usage_set_id, @planning.customer.vehicle_usage_sets, :id, :name, {}, {label: @planning.id ? t('activerecord.attributes.planning.vehicle_usage_set_small') : [], required: true}
+      = f.collection_select :vehicle_usage_set_id, @planning.customer.vehicle_usage_sets, :id, :name, {}, {label: @planning.id ? t('activerecord.attributes.planning.vehicle_usage_set_small') : [], required: true, control_class: 'form-control'}
   - else
     = f.hidden_field :vehicle_usage_set_id, value: @planning.customer.vehicle_usage_sets[0].id
   %div
