--- a/app/views/stores/import.html.erb
+++ b/app/views/stores/import.html.erb
@@ -29,7 +29,7 @@
           <p class="help-block"><%= t '.replace_yes_help' %></p>
         <% end %>
         <%= f.submit message: t('all.verb.import'), icon: 'fa-upload' %>
-        <div class="form-group">
+        <div class="row form-group">
           <div class="col-md-offset-2 col-md-6">
             <a href="/store/import_template.excel" class="btn btn-default" role="button"><i class="fa fa-download fa-fw"></i> <%= t 'import.template_excel' %></a>
           </div>
