--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/error_messages', model: @tag %>
   <%= f.text_field :label, required: true %>
   <%= f.text_field :ref, help: t('.ref_help') %>
-  <div class="form-group" id="tag_color_input">
+  <div class="row form-group" id="tag_color_input">
     <label class="col-md-offset-2 col-md-8 field" for="tag_color">Couleur</label>
     <div class="col-md-offset-2 col-md-8 field input-append">
       <%= select_tag 'tag[color]', options_for_select((COLORS_TABLE + [customised_color_verification(@tag[:color])]).compact.uniq, @tag[:color]), include_blank: '#000000' %> <i class="fa fa-paint-brush" id="customised_color_picker" title="<%= t('activerecord.attributes.vehicle.customised_color') %>"></i>
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div id="tag_icon_input" class="form-group">
+  <div id="tag_icon_input" class="row form-group">
     <label class="col-md-offset-2 col-md-8 field" for="tag_icon"><%= t 'activerecord.attributes.tag.icon' %></label>
     <label class="sr-only" for="tag_icon_size"><%= t 'activerecord.attributes.tag.icon_size' %></label>
     <div class="col-md-offset-2 col-md-8 field">
