--- a/app/views/users/_time_zone.html.erb
+++ b/app/views/users/_time_zone.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="row form-group">
   <label for="user_time_zone" class="col-md-offset-2 col-md-8">
     <%= t 'customers.edit.time_zone' %>
   </label>
