--- a/app/views/vehicle_usages/_form.html.erb
+++ b/app/views/vehicle_usages/_form.html.erb
@@ -13,7 +13,7 @@
         <% if @vehicle_usage.vehicle.customer.enable_references %>
           <%= f.text_field :ref, help: t('vehicles.form.ref.help') %>
         <% end %>
-        <div class="form-group">
+        <div class="row form-group">
           <label class="col-md-offset-2 col-md-8 field" for="vehicle_usage_vehicle_color">
             <%= t("activerecord.attributes.vehicle.color") %>
           </label>
@@ -25,7 +25,7 @@
           </div>
         </div>
         <%= f.text_field :name, required: true %>
-        <div id="vehicle_usage_vehicle_consumption_input" class="form-group">
+        <div id="vehicle_usage_vehicle_consumption_input" class="row form-group">
           <label class="sr-only" for="vehicle_usage_vehicle_emission"><%= t 'activerecord.attributes.vehicle.emission' %></label>
           <label class="sr-only" for="vehicle_usage_vehicle_consumption"><%= t 'activerecord.attributes.vehicle.consumption' %></label>
           <label class="col-md-offset-2 col-md-8 field"><%= t 'activerecord.attributes.vehicle.emission' %> / <%= t 'activerecord.attributes.vehicle.consumption' %></label>
@@ -39,7 +39,7 @@
             <p class="help-block"><%= t 'vehicles.form.emissions.help' %> - <%= current_user.prefered_unit == 'mi' ? t('vehicles.form.consumption.help_miles') : t('vehicles.form.consumption.help') %></p>
           </div>
         </div>
-        <div id="vehicle_usage_vehicle_max_distance" class="form-group">
+        <div id="vehicle_usage_vehicle_max_distance" class="row form-group">
           <label class="sr-only" for="vehicle_usage_vehicle_max_distance"><%= t 'activerecord.attributes.vehicle.max_distance' %></label>
           <label class="col-md-offset-2 col-md-8 field"><%= t 'activerecord.attributes.vehicle.max_distance' %></label>
           <div class="col-md-offset-2 col-md-8 field">
@@ -54,7 +54,7 @@
             <p class="help-block"><%= current_user.prefered_unit == 'mi' ? t('vehicles.form.max_distance.help_miles') : t('vehicles.form.max_distance.help') %></p>
           </div>
         </div>
-        <div id="vehicle_usage_vehicle_max_ride_distance_input" class="form-group">
+        <div id="vehicle_usage_vehicle_max_ride_distance_input" class="row form-group">
           <label class="sr-only" for="vehicle_usage_vehicle_max_ride_distance"><%= t 'activerecord.attributes.vehicle.max_ride_distance' %></label>
           <label class="col-md-offset-2 col-md-8 field"><%= t 'activerecord.attributes.vehicle.max_ride_distance' %></label>
           <div class="col-md-offset-2 col-md-8 field">
@@ -70,7 +70,7 @@
             <p class="help-block"><%= current_user.prefered_unit == 'mi' ? t('vehicles.form.max_ride_distance.help_miles') : t('vehicles.form.max_ride_distance.help') %></p>
           </div>
         </div>
-        <div id="vehicle_usage_vehicle_max_ride_duration_input" class="form-group">
+        <div id="vehicle_usage_vehicle_max_ride_duration_input" class="row form-group">
           <label class="sr-only" for="vehicle_usage_vehicle_max_ride_duration"><%= t 'activerecord.attributes.vehicle.max_ride_duration' %></label>
           <label class="col-md-offset-2 col-md-8 field"><%= t 'activerecord.attributes.vehicle.max_ride_duration' %></label>
           <div class="col-md-offset-2 col-md-8 field">
@@ -107,7 +107,7 @@
           </div>
         <% end %>
 
-        <div id="vehicle_router_input" class="form-group">
+        <div id="vehicle_router_input" class="row form-group">
           <label class="col-md-offset-2 col-md-8 field" for="vehicle_router"><%= t 'activerecord.attributes.vehicle.router' %></label>
           <div class="col-md-offset-2 col-md-8 field">
             <div class="input-group">
@@ -384,7 +384,7 @@
           </div>
         </div>
 
-        <div class="form-group">
+        <div class="row form-group">
           <label class="col-md-offset-2 col-md-8 field" for="speed_multiplier">
             <%= t('activerecord.attributes.vehicle.speed_multiplier') %>
           </label>
@@ -421,7 +421,7 @@
           <p class="help-block"><%= t 'vehicles.form.contact_email.help' %></p>
         <% end %>
 
-        <div id="vehicle_usage_vehicle_phone_number" class="form-group">
+        <div id="vehicle_usage_vehicle_phone_number" class="row form-group">
           <label class="sr-only" for="vehicle_usage_vehicle_phone_number"><%= t 'activerecord.attributes.vehicle.phone_number' %></label>
           <label class="col-md-offset-2 col-md-8 field"><%= t 'activerecord.attributes.vehicle.phone_number' %></label>
           <div class="col-md-offset-2 col-md-8 field">
@@ -445,7 +445,7 @@
     <% if @vehicle_usage_sets[0].customer.default_max_vehicle_usage_sets > 1 %>
     <p class="help-block"><%= t 'vehicle_usages.form.vehicle_usage.help' %></p>
     <% end %>
-    <div id="vehicle_usage_store_input" class="form-group">
+    <div id="vehicle_usage_store_input" class="row form-group">
       <label class="sr-only" for="vehicle_usage_store_start"><%= t 'activerecord.attributes.vehicle_usage.store_start' %></label>
       <label class="sr-only" for="vehicle_usage_store_stop"><%= t 'activerecord.attributes.vehicle_usage.store_stop' %></label>
       <label class="col-md-offset-2 col-md-8 field"><%= t '.stores' %></label>
@@ -470,7 +470,7 @@
         %>
       </div>
     <% end %>
-    <div id="vehicle_usage_time_window_start_time_window_end_input" class="form-group">
+    <div id="vehicle_usage_time_window_start_time_window_end_input" class="row form-group">
       <label class="sr-only" for="vehicle_usage_open"><%= t 'activerecord.attributes.vehicle_usage.time_window_start' %></label>
       <label class="sr-only" for="vehicle_usage_close"><%= t 'activerecord.attributes.vehicle_usage.time_window_end' %></label>
       <label class="col-md-offset-2 col-md-8 field"><%= t '.time_window_start_end' %></label>
@@ -504,7 +504,7 @@
         <p class="help-block"><%= t '.time_window_start_end_help' %></p>
       </div>
     </div>
-    <div id="vehicle_usage_service_time_input" class="form-group">
+    <div id="vehicle_usage_service_time_input" class="row form-group">
       <label class="sr-only" for="vehicle_usage_service_time_start"><%= t 'activerecord.attributes.vehicle_usage.service_time_start' %></label>
       <label class="sr-only" for="vehicle_usage_service_time_end"><%= t 'activerecord.attributes.vehicle_usage.service_time_end' %></label>
       <label class="col-md-offset-2 col-md-8 field"><%= t '.service_times' %></label>
@@ -525,7 +525,7 @@
         <p class="help-block"><%= t '.service_times_help' %></p>
       </div>
     </div>
-    <div id="vehicle_usage_set_work_time_input" class="form-group">
+    <div id="vehicle_usage_set_work_time_input" class="row form-group">
       <label class="sr-only" for="vehicle_usage_work_time"><%= t 'activerecord.attributes.vehicle_usage.work_time' %></label>
       <label class="col-md-offset-2 col-md-8 field"><%= t '.work_time' %></label>
       <div class="col-md-offset-2 col-md-8 field">
@@ -539,7 +539,7 @@
         <p class="help-block"><%= t '.work_time_help' %></p>
       </div>
     </div>
-    <div id="vehicle_usage_rest_input" class="form-group">
+    <div id="vehicle_usage_rest_input" class="row form-group">
       <label class="sr-only" for="vehicle_usage_rest_duration"><%= t 'activerecord.attributes.vehicle_usage.rest_duration' %></label>
       <label class="sr-only" for="vehicle_usage_store_rest"><%= t 'activerecord.attributes.vehicle_usage.store_rest' %></label>
       <label class="col-md-offset-2 col-md-8 field"><%= t '.rest_duration_store' %></label>
@@ -557,7 +557,7 @@
         <p class="help-block"><%= t '.rest_duration.help' %></p>
       </div>
     </div>
-    <div id="vehicle_usage_rest_start_stop_input" class="form-group">
+    <div id="vehicle_usage_rest_start_stop_input" class="row form-group">
       <label class="sr-only" for="vehicle_usage_rest_start"><%= t 'activerecord.attributes.vehicle_usage.rest_start' %></label>
       <label class="sr-only" for="vehicle_usage_rest_stop"><%= t 'activerecord.attributes.vehicle_usage.rest_stop' %></label>
       <label class="col-md-offset-2 col-md-8 field"><%= t '.rest_start_stop' %></label>
